--- a/config/packages/messenger.yaml
+++ b/config/packages/messenger.yaml
@@ -1,7 +1,8 @@
 framework:
     messenger:
         failure_transport: failed
-
+        reset_on_message: true
+        
         transports:
             # https://symfony.com/doc/current/messenger.html#transport-configuration
             async:
